--- a/app/views/settings/grading_scales/edit.html.erb
+++ b/app/views/settings/grading_scales/edit.html.erb
@@ -11,10 +11,9 @@
 	</label>
 			
 	<div class="spacer">
-		<%= submit_tag 'Save', :class => 'positive' %>
-		<%= link_to 'Cancel', grading_scales_path, :class => 'standard' %>
+		<%= submit_tag 'Save', :class => 'btn positive' %>
+		<%= link_to 'Cancel', grading_scales_path, :class => 'btn standard' %>
 	</div>
 <% end %>
 </div>
 
-<%= debug @scale %>
