--- a/app/views/settings/grading_scales/index.html.erb
+++ b/app/views/settings/grading_scales/index.html.erb
@@ -10,14 +10,19 @@
 		<th width='1'></th>		
 	</thead>
 	<tbody>
-		<tr><td colspan='0'><%= link_to "Add Scale", new_grading_scale_path, :class => "positive" %></td></tr>
+		<tr><td colspan='0'><%= link_to "Add Scale", new_grading_scale_path, :class => 'btn positive' %></td></tr>
 		<% for scale in @scales %>
 			<tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%#= url_for(scale) + '/edit' %>'">
 				<td><%= link_to scale.name, edit_grading_scale_path(scale) %></td>
 				<td><%= button_to 'Delete', grading_scale_path(scale), :method => :delete, 
 										:disabled => !scale.courses.empty?,
+										:class => "btn negative " + (scale.courses.empty? ? '' : 'disabled'),
 										:confirm => "Are you sure you want to delete\n\n '" + scale.name + "'?" %></td>
 			</tr>
+			<%= scale.courses.empty? %>
+
 		<% end %>
 	</tbody>
 </table>
+
+
