--- a/app/views/settings/terms/edit.html.erb
+++ b/app/views/settings/terms/edit.html.erb
@@ -29,8 +29,8 @@
 	<div class='spacer'>&nbsp;</div>
 			
 	<div class="spacer">
-		<%= submit_tag 'Save Term', :class => 'positive' %>
-		<%= link_to 'Cancel', terms_path(), :class => 'standard' %>
+		<%= submit_tag 'Save Term', :class => 'btn positive' %>
+		<%= link_to 'Cancel', terms_path(), :class => 'btn standard' %>
 	</div>
 <% end %>
 </div>
