--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -6,10 +6,10 @@
 		</thead>
 		<tbody>
 			<% if current_controller?('courses') then %>
-				<tr><td colspan='0'><%= link_to 'Add New Course', new_course_path, :class=>'standard' %></td></tr>
+				<tr><td colspan='0'><%= link_to 'Add New Course', new_course_path, :class=>'btn standard' %></td></tr>
 			<% end %>
 			<% for course in @courses %>
-				<tr class="<%= cycle('odd', 'even') + (current_page?(:id => course) ? ' current' : '') %>" 
+				<tr class="<%= cycle('even', 'odd') + (current_page?(:id => course) ? ' current' : '') %>" 
 						onclick="location.href='<%= url_for( :action => :show, :id => course.id ) %>'"/>
 					<%= content_tag :td, link_to( course.name, :action => :show, :id => course.id ) %>
 					<%= content_tag :td, course.term.name %>
