--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -23,7 +23,9 @@
 				<%= content_tag :td, u.site.name %>
 				<%= content_tag(:td, u.class_of) if user_type == 'Student' %>
 				<%= content_tag(:td, u.homeroom) if user_type == 'Student' %>
-				<td><%= button_to 'Delete', u, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?" %></td>
+				<td><%= button_to 'Delete', u, :method => :delete, 
+				        :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?",
+				        :class => 'btn negative' %></td>
 			</tr>
 		<% end %>
   </tbody>
