dashboard updates; minor CSS cleanup

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -28,7 +28,24 @@ KangarooBox, LLC.
 </address>
 
 
-<h3>Latest News - Feb. 19, 2009</h3>
+<h3>Latest News - Feb. 26, 2009</h3>
+<ul>
+  <li>Wow, there has been quite a bit going on this week.  Everything from the look
+  and feel of the buttons to tightening down what you can delete has been touched.</li>
+  <li>First off take a look at the buttons.  They are a little bit more subtle and
+  hopefully look semi-good across different browsers/operating systems.  It is 
+  amazingly difficult to get this working correctly.</li>
+  <li>The next big thing is we are now preventing some things from being deleted if
+  there are other things depending on them.  For example, you should not be able
+  to delete a course if that course has assignments.  And now you can't.  We even
+  let you know that you can't remove it by disabling the button.  Cool!</li>
+  <li><%= link_to 'Grading Periods', terms_path %> and <%= link_to 'Grading Scales', grading_scales_path %> 
+  are now editable.  They don't do much at the momemnt but we are working hard on 
+  getting them integrated into the system.  They should be up and functional 
+  within the next week or so.  Stay tuned!</li>
+</ul>
+
+<h3>News - Feb. 19, 2009</h3>
 <ul>
   <li>The <%= link_to "Settings", settings_path %> section is getting heavy attention right
   now and we hope to be fully operational within the week.  It is already looking pretty
