--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -20,8 +20,8 @@
 				<td><%= button_to 'Delete', assignment, 
 									:method => :delete, 
 									:disabled => !assignment.gradations.empty?,
-									:confirm => "Are you sure you want to delete\n\n '" + assignment.name + "'?",
-									:class => 'btn negative' %></td>
+                  :class => "btn negative " + (assignment.gradations.empty? ? '' : 'disabled'),									
+									:confirm => "Are you sure you want to delete the '" + assignment.name + "' assignment?" %></td>
 			</tr>
 		<% end %>
 	<% end %>
