lots of little CSS cleanups

--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,7 +1,9 @@
 <% items = [
 		{:name => 'Grading Periods', :url => '/settings/terms'},
 		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
-		{:name => 'School Calendar', :url => '/settings/events'}]%>
+		{:name => 'Campuses', :url => '/settings/sites'}]#,
+#		{:name => 'School Calendar', :url => '/settings/events'}]
+%>
 		
 <table>
 	<thead>
