--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -20,7 +20,7 @@
 
 <body>
 
-<div class='container showgri'>
+<div class='container showgrid'>
 	<div id='header' class='span-20'>
 
 		<div class='span-3'><img class='top' src='/images/logo.png' width='60px' height='60px'></div>
@@ -42,9 +42,9 @@
 	<div id='flash' class='span-24 last'><%= show_flash %></div>
 
 	<div class='span-4 colborder'><%= yield :left  %></div>
-  <div class='span-17 last'><%= yield  %></div>
+  <div class='span-19 last'><%= yield  %></div>
 
-	<div class='span-20' id='footer'>
+	<div class='span-24 last' id='footer'>
 		&copy; 2005 - 2009 <a href='http://www.kangaroobox.com'>KangarooBox</a>, LLC.  All rights reserved.
 	</div>
 </div>
