--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -28,13 +28,13 @@ body {
 	font-size: 0.8em;
 }
 
-.container .error, .container .notice, .container .success {padding:0em;margin-bottom:1.1em;border:2px solid #ddd;}
+.container .error, .container .notice, .container .warning {padding:0em;margin-bottom:1.1em;border:2px solid #ddd;}
 .container .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
-.container .notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
-.container .success {background:#E6EFC2;color:#264409;border-color:#C6D880;}
+.container .warning {background:#FFF6BF;color:#514721;border-color:#FFD324;}
+.container .notice {background:#E6EFC2;color:#264409;border-color:#C6D880;}
 .container .error a {color:#8a1f11; background:none; padding:0; margin:0; }
-.container .notice a {color:#514721; background:none; padding:0; margin:0; }
-.container .success a {color:#264409; background:none; padding:0; margin:0; }
+.container .warning a {color:#514721; background:none; padding:0; margin:0; }
+.container .notice a {color:#264409; background:none; padding:0; margin:0; }
 
 div.box {	border: 2px solid #D2DDFE; padding: 0.5em; }
 
