--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -28,8 +28,8 @@
 			</label>
 
 			<div class='spacer'>
-				<%= submit_tag 'Save', :class=>"positive" %>
-				<%= link_to 'Cancel', assignment_path(@course), :class => "standard" %>
+				<%= submit_tag 'Save', :class=> 'btn positive' %>
+				<%= link_to 'Cancel', assignment_path(@course), :class => 'btn standard' %>
 			</div>
 	<% end %>
 </div>
