--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -84,6 +84,19 @@ form .required {background: transparent url(/images/bullet_red.png) no-repeat sc
 .sml { width: 50px }
 
 
+.calendar_date_select {
+/*  color:white; */
+/*  border:#777 1px solid; */
+  display:block;
+  width:220px;
+  z-index: 1000;
+}
+
+
+
+
+
+
 /*** Scaffold defaults ***/
 .fieldWithErrors {padding: 2px;background-color: red;display: table;}
 #errorExplanation {
