--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
 <body>
 
-<div class='container showgrid'>
+<div class='container showgri'>
 	<div id='header' class='span-20'>
 
 		<div class='span-3'><img class='top' src='/images/logo.png' width='60px' height='60px'></div>
