--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -7,10 +7,11 @@
 		<thead>
 			<th>Assignment Name</th>
 			<th>Possible Points</th>
+			<th>Type</th>
 			<th>Due Date</th>
 		</thead>
 		<tbody>
-				<tr class='help'><td colspan='3'><--&nbsp; Choose a course from the list at the left</td></tr>
+				<tr class='help'><td colspan='0'><--&nbsp; Choose a course from the list at the left</td></tr>
 		</tbody>
 	</table>
 </div>
