--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -24,16 +24,11 @@
 			</label>
 		
 			<label><span class='required'>Type</span>
-			 <%= collection_select :assignment, :type_id, AssignmentType.find(:all), :id, :name %>
+			 <%= collection_select :assignment, :assignment_category_id, AssignmentCategory.find(:all), :id, :name %>
 			</label>
 
 			<label><span>Due Date</span>
-				<%= f.calendar_date_select :due_date, 
-							:time => :false,
-							:month_year => 'label',
-							:buttons => :false,
-							:class => 'my_cal',
-							:embedded => true %>
+				<%= f.calendar_date_select :due_date, :time => :false, :month_year => 'label', :buttons => :false %>
 			</label>
 
 			<div class='spacer'>
