--- a/app/views/gradations/show.html.erb
+++ b/app/views/gradations/show.html.erb
@@ -42,30 +42,25 @@
 			<tr><td>No Students Found</td></tr>
 		<% end %>
 
-      <%# Loop through the students %>		
       <% for student in @gradations.students %>
 			  <tr class="calc <%= cycle('odd', 'even') %>"  id='<%= student.id %>' />
 				  <%= content_tag :td, student.full_name, :id => student.id %>
 				  <td class='score'>0.0</td>
 				  <% a_counter = counter + 1 %>
-				  
-				  <%# loop through each assignment %>
+			  
 				  <% for assignment in assignments %>
 				    <td class='grades'>
-   				    <% found = nil      # reset our trigger %>
-
+   				    <% found = nil %>
 
 				      <%# does the student have a grade for this assignment? %>
-          	  <% number_of_assignments = student.assignments.count %>
-				      <% 0.upto(number_of_assignments-1) do |index| %>
-				        <% if student.assignments[index] && student.assignments[index].id == assignment.id %>
+				      <% number_of_gradations = student.gradations.count %>
+				      <% 0.upto(number_of_gradations-1) do |index| %>
+				        <% if assignment.id == student.gradations[index].assignment_id %>
 				          <% found = student.gradations[index] %>
 				          <% break %>
 				        <% end %>
 				      <% end %>
 
-				      <%# if a grade was found, then build the form out of it, if not
-				        # then build a placeholder to enter a grade. %>
 				      <% if found %>
 						    <%= text_field_tag 'score', found.points_earned, 
 								    :points	=> assignment.possible_points,
@@ -73,7 +68,7 @@
 								    :id			=> [:s => student.id, :a => assignment.id],
 								    :tabindex	=> a_counter,
 								    :onchange => remote_function( :url => {:action => :update_grade}, 
-								       :with => "'student=#{student.id}&assignment=#{assignment.id}&score=' + value"),
+                    :with   => "'student=#{student.id}&assignment=#{assignment.id}&score=' + value"),
 								    :size		=> '10' %>				      
 				      <% else %>
 						    <%= text_field_tag 'score', '', 
@@ -82,7 +77,7 @@
 								    :id			=> [:s => student.id, :a => assignment.id],
 								    :tabindex	=> a_counter,
 								    :onchange => remote_function( :url => {:action => :update_grade}, 
-								       :with => "'student=#{student.id}&assignment=#{assignment.id}&score=' + value"),
+                    :with   => "'student=#{student.id}&assignment=#{assignment.id}&score=' + value"),
 								    :size		=> '10' %>				      
 				      <% end %>
 				      
