added the ability to edit assignment categories

--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,7 +1,8 @@
 <% items = [
 		{:name => 'Grading Periods', :url => '/settings/terms'},
 		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
-		{:name => 'Campuses', :url => '/settings/sites'}]#,
+		{:name => 'Campuses', :url => '/settings/sites'},
+		{:name => 'Assignment Types', :url => '/settings/assignment_categories'}]#,
 #		{:name => 'School Calendar', :url => '/settings/events'}]
 %>
 		
