--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,7 +4,7 @@
 
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<div class='span-12 last box'>
+<div class='box span-12 last'>
 	<% form_for( @course, :url => {}, :html => {:id => 'edit_course'} ) do |f| %>
 		<label><span class='required'>Name</span>
 			<%= f.text_field :name %>
@@ -30,7 +30,9 @@
 	<%= observe_form :edit_course, :url => {:action => :update} %>
 </div>
 
-<div class='span-16 last'>
+<div class='span-10'></div>
+
+<div class='span-3'>
 	<form id='class_of_form'>
 		<%= select_tag 'class_of', options_for_select(class_range.insert(0, 'Class Of ...'), ' '), 
 				:onchange => 
@@ -40,14 +42,16 @@
 						:with => "'value=' + value + '||Class Of ' + value + '||C'",
 						:method => :get) %>
 	</form>
+</div>
 
+<div class='span-10 last'>
 	<form id='homeroom_form'>
-		<%#= collection_select :homeroom, :name, @homerooms, :id, :name, {:include_blank => 'Home Room'}, {
+		<%= collection_select :homeroom, :name, @homerooms, :to_s, :to_s, {:include_blank => 'Home Room'}, {
 				:onchange => 
 					remote_function(
 						:update => 'student_list', 
 						:url => { :action => :show }, 
-						:with => "'value=' + value + '||' + options[selectedIndex].text + '||H'",
+						:with => "'value=' + value + '||Home Room ' + options[selectedIndex].text + '||H'",
 						:method => :get) } %>
 	</form>
 </div>
