authlogic is working ... barely

--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,4 +1,5 @@
 <% content_for :page_header do %>
+  <%# FIXME: Remove this if we are not using it%>
   <%= calendar_date_select_includes %>
 <% end %>
 
