--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,10 +16,24 @@ should give you enough 'things' to be able to exercise the program a little bit.
 Please, take a look around and push all the buttons.  You can't hurt anything here.
 If you find something interesting, please <a href='mailto:gradesheet@kangaroobox.com'>let us know about it</a>.</p>
 
+<p>Use one of the following accounts to log into Gradesheet:</p>
 <dl>
-  <dt>NOTE:<dd>You are automatically logged in as a teacher named 'Kim Hurt'.  Someday soon you
-	  will be able to log into the system as a Student, Teacher Assistant or another
-	  Teacher.</dd>
+  <dt>Site Administrator<dd><ul>
+    <li>Username: <em>admin</em></li>
+    <li>Password: <em>admin</em></li></ul></dd>
+  </dt>
+  <dt>Teacher A<dd><ul>
+    <li>Username: <em>teachera</em></li>
+    <li>Password: <em>teachera</em></li></ul></dd>
+  </dt>
+  <dt>Teacher B<dd><ul>
+    <li>Username: <em>teacherb</em></li>
+    <li>Password: <em>teacherb</em></li></ul></dd>
+  </dt>
+  <dt>Student A<dd><ul>
+    <li>Username: <em>studenta</em></li>
+    <li>Password: <em>studenta</em></li></ul></dd>
+  </dt>
 </dl>
 
 <address>
@@ -28,7 +42,15 @@ KangarooBox, LLC.
 </address>
 
 
-<h3>Latest News - Feb. 26, 2009</h3>
+<h3>Latest News - Mar. 23, 2009</h3>
+<ul>
+  <li>The authentication system is active.  Now that you have to log in as a real 
+  user (Teacher, Admin, Student/Parent), you will find instructions on how to
+  do it at the top of this page.  Give it a go and let me know how it works.  You
+  should see different menu items and classes depending on how you log in.</li>
+</ul>
+
+<h3>News - Feb. 26, 2009</h3>
 <ul>
   <li>Wow, there has been quite a bit going on this week.  Everything from the look
   and feel of the buttons to tightening down what you can delete has been touched.</li>
