--- a/app/views/gradations/show.html.erb
+++ b/app/views/gradations/show.html.erb
@@ -18,7 +18,7 @@
 		<tr>
 			<th>Student Name</th>
 			<th width='60'>%</th>
-			<% if assignments.count == 0 then %>
+			<% if assignments.length == 0 then %>
 				<th>No Assignments Found</th>			
 			<% else %>
 				<% for assignment in assignments %>
